--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.4",
+    "chart.js": "^4.4.5",
     "firebase": "^10.14.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
