--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "@fullcalendar/angular": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
+    "angular-plotly.js": "^6.0.0",
+    "apexcharts": "^3.54.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.5",
     "firebase": "^10.14.0",
+    "ng-apexcharts": "^1.12.0",
     "ngx-bootstrap": "^18.0.2",
+    "plotly.js": "^2.35.2",
+    "plotly.js-dist": "^2.35.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
@@ -36,6 +41,7 @@
     "@angular/cli": "^18.2.1",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/plotly.js": "^2.33.5",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
