--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@angular/core": "^18.2.0",
     "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.2.0",
+    "@angular/material": "^18.2.13",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.0",
     "@fullcalendar/angular": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
@@ -26,7 +28,11 @@
     "apexcharts": "^3.54.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.5",
+    "file-saver": "^2.0.5",
     "firebase": "^10.14.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "ng-apexcharts": "^1.12.0",
     "ngx-bootstrap": "^18.0.2",
     "plotly.js": "^2.35.2",
@@ -34,13 +40,16 @@
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.1",
     "@angular/cli": "^18.2.1",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
+    "@types/jspdf": "^1.3.3",
     "@types/plotly.js": "^2.33.5",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
