Commit "Productividad Empleados"

--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@fullcalendar/angular": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "angular-calendar": "^0.31.1",
     "angular-plotly.js": "^6.0.0",
     "apexcharts": "^3.54.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.5",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.14.0",
     "html2canvas": "^1.4.1",
