--- a/angular.json
+++ b/angular.json
@@ -78,7 +78,10 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "src/styles.css",
+              "node_modules/angular-calendar/css/angular-calendar.css"
+            ],
             "scripts": []
           }
         }
