--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "moment": "^2.30.1",
     "ng-apexcharts": "^1.12.0",
     "ngx-bootstrap": "^18.0.2",
     "plotly.js": "^2.35.2",
